<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/purple"
    android:layout_height="match_parent"

     tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_header"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />
        />


    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_second"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"/>

        <Button
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="13dp"
            android:onClick="MultipleLanguages"
            android:layout_marginRight="13dp"
            android:stateListAnimator="@null"
            android:text="@string/changeLang" />

        <ImageView
            android:id="@+id/imagegolfcourse"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:src="@drawable/ic_golf"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="For more information contact us"
            android:textSize="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone number 0788584534"
            android:onClick="Number"
            android:textSize="10dp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email: muthaigagolfclub@gmail.com"
            android:onClick="Email"
            android:textSize="10dp"
            android:textAlignment="center"
            android:textStyle="bold" />



    </LinearLayout>


</RelativeLayout>